# LeCrunch3

./: .gitignore  CMakeLists.txt  fetchAndSendToConstellation.py  pyproject.toml
.github/workflows/: python-publish.yml
LeCrunch3/: VICPClient.h
src/: VICPClient.cc
test/: CMakeLists.txt  read_dso.cc
